--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </a>
           <ul class="list-unstyled components mb-5">
             <li class="active">
-              <a href="#quem-somos">Quem Somos</a>
+              <a href="#quem-somos">QUEM SOMOS</a>
             </li>
             <li>
               <a
