--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </a>
           <ul class="list-unstyled components mb-5">
             <li class="active">
-              <a href="#quem-somos">QUEM SOMOS</a>
+              <a href="#quem-somos">Quem Somos</a>
             </li>
             <li>
               <a
@@ -78,7 +78,7 @@
       <!-- Page Content  -->
       <div id="content" class="p-4 p-md-5 pt-5">
         <h1 id="vida-em-ritmo" class="sidebar-heading">Vida em Ritmo</h1>
-        <h2 id="quem-somos" class="mb-4">Quem Somos</h2>
+        <h2 id="quem-somos" class="mb-4">QUEM SOMOS</h2>
         <p>
 			Somos um grupo de estudantes do Mestrado Técnicas Laboratoriais de Biopatologia que, no âmbito da disciplina de Comunicação em Saúde, pretendemos sensibilizar e promover a temática do Ciclo Circadiano com o objetivo de dar conhecer mais sobre o tema e fornecer dicas e ferramentas para vos ajudar a melhorar o vosso Ciclo Circadiano.
         </p>
